
\item The package \pkg{snow} has been superseded by \pkg{parallel}, changed where needed. In \code{\link{BaumWelch.mmglmlong1}} arguments \code{makeSOCKcluster} and \code{SNOWcluster} renamed to \code{makePSOCKcluster} and \code{PSOCKcluster}, respectively. Functions \code{dmmglm} and \code{pmmglm} added to exported namespace (required for parallel processing). (13 Aug 2014)

\item \code{\link{BaumWelch.mmglmlong1}}: Call to \code{clusterApply} and \code{clusterExport} changed to \code{parallel::clusterApply} and \code{parallel::clusterExport}, respectively. (25 Sep 2014)

\item Fix error in \code{inst/CITATION} file. (21 Jan 2015)

\item Added to NAMESPACE: functions imported from \pkg{stats}. (06 Jul 2015)

\item \code{\link{HiddenMarkov}}: Add DOI to some references, rename topic to appear first in table of contents. (16 Oct 2015)

\item Fortran warning: in file \code{src/extract.f}, \code{integer} definitions should precede \code{double precision} definitions. (29 Aug 2016)

\item Fix NOTES in \code{R CMD check --as-cran}: \code{Found no calls to: 'R_registerRoutines',} \code{'R_useDynamicSymbols'} (17 Jun 2017)
}}


\section{Future Development}{
\enumerate{
\item The functions \code{\link{Viterbi}} and \code{\link{residuals}} need methods for objects of class \code{\link{mmpp}}.

\item A number of the original functions have names that are too general. For example \code{\link{forwardback}} calculates the forward-backward probabilities, but only for the model \code{\link{dthmm}}. The corresponding function for the \code{\link{mmpp}} model is \code{\link{forwardback.mmpp}}. It would be more consistent to attach to these original functions a \code{dthmm} suffix.

\item The demonstration examples are all for \code{\link{dthmm}}. Also need some for \code{\link{mmglm1}}, \code{\link{mmglmlong1}} and \code{\link{mmpp}}.
}}

\keyword{documentation}

