@@ -1,4 +1,4 @@
-1897ad9605c50b9c8511186b0890b1a9 *DESCRIPTION
+7bcd3af09bb8bc416591192cf169a705 *DESCRIPTION
 ed5cc1380a6c05d376b5df113c24ea9b *NAMESPACE
 5986e6402724232d4b66a8f2cd6af77b *NEWS
 b36ac435e05cae710372bdb74c8c3293 *R/BaumWelch.R
@@ -68,11 +68,11 @@ a68c55e678ef81394c932569a28b626e *R/mmglmlong1.R
 b3dc0f49947469b69f24264e7dce6e66 *R/residuals.mmglmlong1.R
 19a4f53d2a2f2d08c95c938e9ad6edf9 *R/residuals.mmpp.R
 f2a96a716956bca0a0167e514ef74514 *R/simulate.dthmm.R
-dcd855717e896a02b45a7c8563f2aced *R/simulate.mchain.R
+51b57ba96aa6fcc24991d76b078e99eb *R/simulate.mchain.R
 5fbd5cd74981d7ab328f706d594b5316 *R/simulate.mmglm0.R
 9f24df99dcad7f0724c35fd71359c57b *R/simulate.mmglm1.R
 e1f29793bafad45d134dfb00d16a96ea *R/simulate.mmglmlong1.R
-58c0d34e02f7a0e844cfae89f48cd88a *R/simulate.mmpp.R
+722e5e13ce9e56710aabcfecdcf06a15 *R/simulate.mmpp.R
 5b76918b5ad03fcc4da8420e62c138bd *R/summary.dthmm.R
 cf95ca2e9e28e28a90eb0fd796f28b66 *R/summary.mmglm0.R
 a5670e6a8b4712b60b8ee8268f764b25 *R/summary.mmglm1.R
@@ -80,6 +80,7 @@ a5670e6a8b4712b60b8ee8268f764b25 *R/summary.mmglm1.R
 3f1b9c5d8e2272780ad40a417b578fa8 *R/summary.mmpp.R
 864fc25551cf9cd206d1cbe2f081daec *R/vector2Pi.R
 befe46c5ea55a55167939fdb2c8901c5 *R/vector2Q.R
+e71d08ef99d2de1a42faa0447e6a8fd3 *build/partial.rdb
 64d3eb2498905f047b07d4b32dfd7e5c *demo/00Index
 f1975359a0e73f39fb3f064c9ce5033b *demo/beta.R
 901c94928a6e4cc0a5c587537fa44cce *demo/gamma.R
@@ -87,24 +88,24 @@ bfee2e728683d14aba32abdbcd7c0883 *demo/lnorm.R
 890f3cd71b860f6a19233c5cbfc37f22 *demo/logis.R
 0f808acf3f40e8df57d84906e9c816e4 *demo/norm.R
 78dbf968c06379f63ec270565efeda51 *inst/CITATION
-3777e00c59b8b0161bc7863bb49b945a *inst/doc/index.html
-c1e21a8e0ebd1b5467c3a60919c980ab *man/BaumWelch.Rd
-f744502c655fdca9e00ea2f7b61d84c0 *man/Changes.Rd
+bcc366573fdf2bf6c56206867a329801 *inst/doc/index.html
+8ab978754ea52dcae4b87e0ade8f9b95 *man/BaumWelch.Rd
+c551df2e894abac61f246b4d8a76794a *man/Changes.Rd
 69e9392ae7ec514b115a4e47c83abeb3 *man/Demonstration.Rd
 e055514980070bfeab459d960eb967bc *man/Estep.Rd
 259d9b8830abf98c98c091b2e8168bf1 *man/HiddenMarkov-defunct.Rd
 1279c1a0ad1f56c1e1b1716a05b2abb7 *man/HiddenMarkov-dthmm-deprecated.Rd
 46a03a92b90e340e4607892fd48f7fe1 *man/HiddenMarkov-internal.Rd
 e84d3bb4d8054b3c8915fd08d7d60d17 *man/HiddenMarkov-mmpp-deprecated.Rd
-d2903b17cf05ec8a6a0ff5bf26c87a09 *man/HiddenMarkov.Rd
+2d6eeef3182f40cb67c3caf17970dec1 *man/HiddenMarkov.Rd
 562a49d4cfaff3a1271f9d9a624cbb71 *man/Mstep.Rd
 9b37b4a7908d9847db12329392142b48 *man/Transform-Parameters.Rd
-183ef6c5941245d251cc21fffcbb8985 *man/Viterbi.Rd
+b6f9419a7482efb2433a30494cf7f5e5 *man/Viterbi.Rd
 73fba223602bde0bac06794f3a7709cf *man/bwcontrol.Rd
 8f984f36bc34814de42755564725830c *man/compdelta.Rd
 c1aeae442055cf3f5ee83537ce2626f5 *man/dthmm.Rd
 e1412a61da030aeddf52f0046550fb2c *man/forwardback.Rd
-bb8c2a98efbc4d0bb0b9d4f6f008e1ab *man/logLik.Rd
+4120986cafbfe091a0b07af332b49a7a *man/logLik.Rd
 929b0f1b02ec8d880d4b2fe9a99c1135 *man/mchain.Rd
 3cb7668d2cac7854f4d2ba00c354efca *man/mmglm-2nd-level-functions.Rd
 aac51a7a71d80368ba8c2508a394074e *man/mmglm.Rd
@@ -112,9 +113,9 @@ aac51a7a71d80368ba8c2508a394074e *man/mmglm.Rd
 b1b787110ac4bcd725f377c3b112c5f4 *man/mmpp.Rd
 342773a7da5260186da1bf602d6169c4 *man/neglogLik.Rd
 4e96317702bd02f1d66c01a7393ae51e *man/probhmm.Rd
-a76277452d400ce5876045c7ec62ac85 *man/residuals.Rd
-92a3139abf62df70909dd66c70f5a792 *man/simulate.Rd
-071ae56118e4b636c96f5f98821dce51 *man/summary.Rd
+d85db07e753f150e44e0166366be96f2 *man/residuals.Rd
+8f6c0eeccca74cf0f54755461b126714 *man/simulate.Rd
+5128ad78d7f6f3a612d3c59fe20e0fd5 *man/summary.Rd
 05e8ce6ae4fd969cafa41d7aedf97f0a *src/HiddenMarkov_init.c
 ef77e67d8e6f96fab822fcbbdf0e8168 *src/dthmm.f
 94ca194d367328858f9564b329e728dc *src/extract.f
