@@ -24,7 +24,7 @@
 </dl>
 
 <dl>
-<dt><a href="http://cran.at.r-project.org/web/packages/HiddenMarkov/HiddenMarkov.pdf">PDF Manual</a>:
+<dt><a href="https://cran.r-project.org/package=HiddenMarkov/HiddenMarkov.pdf">PDF Manual</a>:
 <dd> PDF Version of Reference Manual
 </dl>
 
@@ -53,6 +53,11 @@
 <dd><a href="../html/HiddenMarkov-dthmm-deprecated.html">List of Deprecated dthmm Functions</a>
 <dd><a href="../html/HiddenMarkov-mmpp-deprecated.html">List of Deprecated mmpp Functions</a>
 <dd><a href="../html/HiddenMarkov-defunct.html">List of Defunct Functions</a>
+</dl>
+
+<dl>
+<dt><a href="http://www.statsresearch.co.nz/dsh/sslib/" target="new">SSLib</a>:
+<dd> Statistical Seismology Library (SSLib) Web Page
 </dl>
 
 </body>
